# central-achat-publique

./: .env.example  .gitignore  .pre-commit-config.yaml  CI.md  CONTEXT_SNAPSHOT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  strategy.md
alembic/: env.py
alembic/versions/: 20260129_0001_baseline_discovery_compare.py  20260130_0002_debug_tables.py  20260130_0003_llm_audit_agent_version.py  20260130_0004_snapshot_fields.py  20260130_0005_drop_page_snapshots_url_unique.py
apps/api/: deps.py  guards.py  main.py  settings.py
apps/api/middleware/: request_logging.py  trace_id.py
apps/web/debug/: .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs
infra/: settings.py
modules/discovery_compare/application/: agent_runner.py  ports.py  (+4 more)
scripts/: db_migrate.sh  db_reset.sh  format.sh  start.sh  test.sh
scripts/ci/: check_migrations_immutable.sh  check_single_head.sh  db_smoke.sh
shared/db/: base.py  session.py  settings.py
tests/integration/: db_utils.py  test_api_health.py  test_debug_candidate_judge.py  test_debug_endpoints.py  test_debug_exa_recall.py  test_debug_llm_runs_explorer.py  test_debug_run_diff.py  test_debug_run_listing.py  test_debug_snapshot_inspector.py  test_discovery_compare_runner.py  test_snapshot_repository.py
tests/unit/: test_comparability_scoring.py  test_discovery_compare_schemas.py  test_exa_mcp_client.py  test_exa_provider.py  test_llm_runtime.py  test_playwright_stdio_registry.py  test_settings_env_files.py  test_snapshot_extraction.py  test_snapshot_module.py  test_snapshot_providers.py
(+45 files in other folders)
